# tanglenomicon_core_libraries

./: .buildinfo.bak  .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .uncrustify.cfg  CITATION  CMakeLists.txt  CMakeSettings.json  Justfile  README.md  _README.md  cppcheck.supp  flake.nix  genindex.html  index.html  mkdocs.yml  objects.inv  prf-prf.html  requirements.txt  search.html  searchindex.js  shell.nix
libraries/: CMakeLists.txt
libraries/cxxopts/: CMakeLists.txt
libraries/json/: CMakeLists.txt  json.hpp  json_fwd.hpp
libraries/unit_test_framework/: CMakeLists.txt
misc/template_modules/gen-template/: CMakeLists.txt  index.md  unit-description.md  use-case.md
misc/template_modules/mut-template/: CMakeLists.txt  index.md  unit-description.md
misc/template_modules/note-template/: CMakeLists.txt  index.md  unit-description.md  use-case.md
misc/test_stubs/storage_stubs/: CMakeLists.txt
source/: CMakeLists.txt
source/__generator_pattern/: CMakeLists.txt  generator_pattern.c  generator_pattern.h
source/comp-arborescent_moves/: unit-description.md  use-case.md
source/comp-arborescent_moves/arborescent_tangles/: arborescent_F1.md  arborescent_F2.md
source/comp-arborescent_moves/unit-description/: arborescent_F3.md
source/comp-arborescent_moves/use-case/: arborescent_F1.md  arborescent_F2.md  arborescent_F3.md
source/comp-rational_data/: .nav.yml  CMakeLists.txt  index.md  mkdocs.yml  rational_data.md  unit-description.md  use-case.md
source/comp-rational_data/docs/: index.md  unit-description.md  use-case.md
source/comp-rational_data/src/: comp_rational_data.c  comp_rational_data.h
source/comp-rational_data/test/: CMakeLists.txt  test_computation_rational_data.c
source/comp-rlitt_grafting/: .nav.yml  CMakeLists.txt  index.md  mkdocs.yml  unit-description.md  use-case.md
source/comp-rlitt_grafting/docs/: index.md  unit-description.md  use-case.md
source/comp-rlitt_grafting/src/: comp_rlitt_grafting.c  comp_rlitt_grafting.h
source/comp-rlitt_grafting/test/: CMakeLists.txt  test_comp_rlitt_grafting.c
source/comp-rlitt_positivity/: .nav.yml  CMakeLists.txt  index.md  mkdocs.yml  unit-description.md  use-case.md
source/comp-rlitt_positivity/docs/: index.md  unit-description.md  use-case.md
source/comp-rlitt_positivity/src/: comp_rlitt_positivity.c  comp_rlitt_positivity.h
source/comp-rlitt_positivity/test/: CMakeLists.txt  test_comp_rlitt_positivity.c
source/comp-rlitt_pure_vignette/: .nav.yml  CMakeLists.txt  index.md  mkdocs.yml  unit-description.md  use-case.md
source/comp-rlitt_pure_vignette/docs/: index.md  unit-description.md  use-case.md
source/comp-rlitt_pure_vignette/src/: comp_rlitt_pure_vignette.c  comp_rlitt_pure_vignette.h
source/comp-rlitt_pure_vignette/test/: CMakeLists.txt  test_comp_rlitt_pure_vignette.c
source/comp-rlitt_ringshift/: CMakeLists.txt  index.md  unit-description.md  use-case.md
source/comp-rlitt_ringshift/src/: comp_rlitt_ringshift.c  comp_rlitt_ringshift.h
source/comp-rlitt_ringshift/test/: CMakeLists.txt  test_comp_rlitt_ringshift.c
source/comp-wptt_canonicity/: CMakeLists.txt  index.md  mkdocs.yml  unit-description.md  use-case.md
source/comp-wptt_canonicity/docs/: index.md  unit-description.md  use-case.md
source/comp-wptt_canonicity/src/: comp_wptt_canonicity.c  comp_wptt_canonicity.h
source/comp-wptt_canonicity/test/: CMakeLists.txt  test_comp_wptt_canonicity.c  test_computation_wptt_canonicity.c
source/comp-wptt_vertex_canonicity/: .nav.yml  CMakeLists.txt  index.md  mkdocs.yml  unit-description.md  use-case.md
source/comp-wptt_vertex_canonicity/docs/: index.md  unit-description.md  use-case.md
source/comp-wptt_vertex_canonicity/src/: comp_wptt_vertex_canonicity.c  comp_wptt_vertex_canonicity.h
source/comp-wptt_vertex_canonicity/test/: CMakeLists.txt  test_comp_wptt_vertex_canonicity.c
source/computations/: CMakeLists.txt
source/computations/rational_data/: CMakeLists.txt  (+2 more)
source/defs/: CMakeLists.txt  tang_defs.h
source/gen-montesinos/: .nav.yml  CMakeLists.txt  generator_montesinos.c  index.md  mkdocs.yml  montesinos.md  unit-description.md  use-case.md
source/gen-rational/: .nav.yml  CMakeLists.txt  generator_rational.c  index.md  mkdocs.yml  rational.md  unit-description.md  use-case.md
source/gen-rlitt/: .nav.yml  CMakeLists.txt  index.md  mkdocs.yml
source/generator_rational/: CMakeLists.txt  generator_rational.c  generator_rational.h
source/generators/: CMakeLists.txt
source/main/: CMakeLists.txt  main.cpp
source/mut-rlitt_ringshift/: .nav.yml  CMakeLists.txt  index.md  mkdocs.yml  unit-description.md
source/mut-wptt_f_moves/: .nav.yml  CMakeLists.txt  index.md  mkdocs.yml  unit-description.md  use-case.md
source/notations/: CMakeLists.txt
source/note-algebraic_tangle_tree/: .nav.yml  CMakeLists.txt  algebraic_tangle_tree.md  index.md  mkdocs.yml  unit-description.md  use-case.md
source/note-awptt/: CMakeLists.txt  unit-description.md  use-case.md
source/note-path/: CMakeLists.txt  index.md  unit-description.md
source/note-plpath/: CMakeLists.txt  index.md  mkdocs.yml  unit-description.md  use-case.md
source/note-twist_vector/: .nav.yml  CMakeLists.txt  index.md  mkdocs.yml  notation_tv.c  twist_vector.md  unit-description.md  use-case.md
source/note-wptt/: .nav.yml  CMakeLists.txt  index.md  mkdocs.yml  unit-description.md  use-case.md
source/runner-cli/: CMakeLists.txt  cli.md  main.cpp  unit-description.md  use-case.md
source/runner-mont_gen_wasm/: CMakeLists.txt  main.cpp
source/runner-py_gen_montesinos/: CMakeLists.txt  py_gen_montesinos.pyx
source/runners/: CMakeLists.txt
source/storage/: CMakeLists.txt  storage.cpp  storage.hpp
source/store-cpp_storage_interface/: .nav.yml  CMakeLists.txt  index.md  mkdocs.yml
source/store-json/: .nav.yml  CMakeLists.txt  index.md  mkdocs.yml  storage_JSON.cpp  unit-description.md  use-case.md
source/store-storage_interface/: CMakeLists.txt
source/util/: CMakeLists.txt  tang_defs.h
tests/unit_tests/: CMakeLists.txt
(+620 files in other folders)
