block(SCOPE_FOR VARIABLES)
unset(CMAKE_CXX_CPPCHECK)
unset(CMAKE_C_CPPCHECK)
add_subdirectory(json)
add_library(Unity STATIC ./unit_test_framework/src/unity.c)
add_library(Cmock STATIC ./unitmock_test_framework/src/cmock.c)
target_include_directories(Unity PUBLIC unit_test_framework/src)
target_include_directories(Cmock PUBLIC unitmock_test_framework/src)
target_link_libraries(Cmock Unity)
endblock()

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
include(FindLizard.cmake)
find_package(Lizard)
